# facebook_tool

./: .gitignore  README.md  cookies.json  main.py  pyproject.toml  run_scraper.py  run_video_downloader.py
core/: auth.py  base_tool.py  engine.py
tools/: __init__.py
tools/fb_post_scraper/: __init__.py  scraper.py
tools/fb_video_downloader/: __init__.py  scraper.py
tools/manga_web_latest_catcher_cleaning/: __init__.py  scraper.py
