[project]
name = "modular-scrapling-cli"
version = "0.1.0"
description = "A beautiful and modular CLI scraper using Scrapling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapling>=0.4.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "curl-cffi>=0.15.0",
    "playwright>=1.40.0",
    "browserforge>=1.0.0",
]
